# qtterminalwidget

./: CMakeLists.txt  README  TODO
java-solution/jcterm/src/com/jcraft/jcterm/: Channel.java  JCTermSwingFrame.java  JSchException.java  JSchSession.java  Session.java
java-solution/ptycpp/: ptycpp.cpp
pty-stub/: Makefile  gtkwin.c  misc.c  new.c  null.c  putty.h  qt.c  settings.c  uxconfig.h
pty-stub/unix/: unix.h  unix.h~
src/: QTerminalWidget.cpp  QTerminalWidget.h
src/pty/: ldisc.c  putty.h  qt.c  qt.cpp  qtmain.c  unix.h  version.def
test-shell/: Main.cpp
widget-stub/: CMakeLists.txt
widget-stub/src/: Main.cpp
